[tool.poetry]
name = "sistema-de-vendas-inventario-queiroz-lubrificantes"
version = "1.2.0"
license = "MIT license"
description = ""
authors = ["Diegiwg (Diego Queiroz) <diegiwg@gmail.com>"]
readme = "README.md"
packages = [{include = "sistema_de_vendas_inventario_queiroz_lubrificantes"}]

[tool.poetry.dependencies]
python = "^3.11"
briefcase = "0.3.14"
tinydb = "4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
project_name = "Sistema de Vendas Inventario Queiroz Lubrificantes"
bundle = "com.diegiwg"
version = "1.2.0"
url = ""
license = "MIT license"
author = "Diegiwg (Diego Queiroz)"
author_email = "diegiwg@gmail.com"

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes]
formal_name = "Sistema de Vendas Inventario Queiroz Lubrificantes"
description = " "
long_description = ""
icon = "sistema_de_vendas_inventario_queiroz_lubrificantes/resources/sistema_de_vendas_inventario_queiroz_lubrificantes"
sources = [
    "sistema_de_vendas_inventario_queiroz_lubrificantes",
]
test_sources = [
    "tests",
]

requires = [
    "tinydb"
]
test_requires = [
    "pytest",
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.macOS]
requires = [
    "toga-cocoa~=0.3.1",
    "std-nslog~=1.0.0"
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.linux]
requires = [
    "toga-gtk~=0.3.1",
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK
    "libgtk-3-0",
    # Needed to provide GI bindings to GTK
    "libgirepository-1.0-1",
    "gir1.2-gtk-3.0",
    # Needed to provide WebKit2 at runtime
    # "libwebkit2gtk-4.0-37",
    # "gir1.2-webkit2-4.0",
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    # "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk",
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.linux.appimage]
manylinux = "manylinux2014"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]
linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "44"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.windows]
requires = [
    "toga-winforms~=0.3.1",
]

# Mobile deployments
[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.iOS]
requires = [
    "toga-iOS~=0.3.1",
    "std-nslog~=1.0.0"
]

[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.android]
requires = [
    "toga-android~=0.3.1"
]

# Web deployments
[tool.briefcase.app.sistema_de_vendas_inventario_queiroz_lubrificantes.web]
requires = [
    "toga-web~=0.3.1",
]
style_framework = "Shoelace v2.3"
